--- a/testStart.html
+++ b/testStart.html
@@ -4,9 +4,10 @@
 		<title>TestStart</title>
 	</head>
 	<body>
-		<a href="Game.html"><button onclick="difficulty(0)">Easy</button></a>
-		<a href="Game.html"><button onclick="difficulty(1)">Medium</button></a>
-		<a href="Game.html"><button onclick="difficulty(2)">Hard</button></a>
+		<a href="Game.html"><button onclick="difficulty('easy')">Easy</button></a>
+		<a href="Game.html"><button onclick="difficulty('medium')">Medium</button></a>
+		<a href="Game.html"><button onclick="difficulty('hard')">Hard</button></a>
+		
 	<body>	
 	
 	<script>
