--- a/Game.html
+++ b/Game.html
@@ -4,16 +4,30 @@
 		<title>Gameplay</title>
 	</head>
 	<body>
-		<button onclick="nextQuestion();">Next Question</button>
+		<button onclick="startGame()">Generate Question</button>
 		<p id="question"></p>
 	<body>
 	
 	<script>
-	var info;
+
+
+	function startGame(){
+		document.getElementById("question").innerHTML="This is a " + sessionStorage.difficulty + " type question.";
+	}
 	
+	function createQuestion(){
+	return sessionStorage.difficulty;
+	}
+
+	/** info;
+	
+	function startGame(){
+		document.getElementById("question").innerHTML=createQuestion();
+	}
+
 	function nextQuestion(){
-		var difficulty = sessionStorage.difficulty;
-		var info;
+		//var difficulty = sessionStorage.difficulty;
+		//var info;
 		
 		/**switch (difficulty)
 		{
@@ -27,10 +41,10 @@
 				info = createQuestion(Math.floor(Math.random() * 4));
 				break;
 		}
-		**/
-		document.getElementById("question").innerHTML="1";
+		
+		document.getElementById("question").innerHTML=test();
 	}
-	
+
 	
 	function createQuestion(operatorType){
 		var operators = {"+", "-", "x", "/"};
@@ -39,6 +53,7 @@
 	
 		return 1;
 	}
+	**/
 	
 	</script>
 	
