--- a/Test 1 - Main Menu.html
+++ b/Test 1 - Main Menu.html
@@ -15,7 +15,7 @@
   <h3 class="headers">
    Studio de Singe</h3>
   <div>
-   <button onclick="startGame()">Start Game</button>
+   <button onclick="window.location.href='testStart.html'">Start Game</button>
    <button onclick="JavaScript:alert('Well done!')">Tutorial</button>
    <button onclick="window.location.href='Test 1 - High Scores.html'">High Scores</button></div>
 <script>
