--- a/Test 1 - High Scores Easy.html
+++ b/Test 1 - High Scores Easy.html
@@ -4,7 +4,7 @@
   <!--<meta charset="utf-8" />-->
   <!--<link href="styles/styles.css" rel="stylesheet" type="text/css" />-->
   
-    <link type="text/css" rel="stylesheet" href="Test 1 - High Scores CSS.css"/>
+    <link type="text/css" rel="stylesheet" href="Test 1 - High Scores Easy CSS.css"/>
     <!--<script src="Splash_JS.js" type="text/javascript></script>-->
     <title>High Scores</title>
  </head>
@@ -14,9 +14,9 @@
    High Scores</h3>
     <div id="scoreArea">
   <div id="scoreType">
-   <button>Easy</button>
-   <button>Medium</button>
-   <button>Hard</button>
+   <button id="easy">Easy</button>
+   <button id="medium" onclick="window.location.href='Test 1 - High Scores Medium.html'">Medium</button>
+   <button id="hard" onclick="window.location.href='Test 1 - High Scores Hard.html'">Hard</button>
   </div>
   </div>
    
