--- a/Test 1 - High Scores Medium.html
+++ b/Test 1 - High Scores Medium.html
@@ -4,20 +4,22 @@
   <!--<meta charset="utf-8" />-->
   <!--<link href="styles/styles.css" rel="stylesheet" type="text/css" />-->
   
-    <link type="text/css" rel="stylesheet" href="Test 1 - Main Menu CSS.css"/>
+    <link type="text/css" rel="stylesheet" href="Test 1 - High Scores Medium CSS.css"/>
     <!--<script src="Splash_JS.js" type="text/javascript></script>-->
-    <title>Swinging Monkey</title>
+    <title>High Scores</title>
  </head>
  <body>
-  <button id="settings"></button>
-  <h1 class="headers" id="title">
-   Swinging Monkey</h1>
+  <button id="returnHome" onclick="window.location.href='Test 1 - Main Menu.html'">Back</button>
   <h3 class="headers">
-   Studio de Singe</h3>
-  <div>
-   <button onclick="window.location.href='testStart.html'">Start Game</button>
-   <button onclick="JavaScript:alert('Well done!')">Tutorial</button>
-   <button onclick="window.location.href='Test 1 - High Scores Easy.html'">High Scores</button></div>
+   High Scores</h3>
+    <div id="scoreArea">
+  <div id="scoreType">
+   <button id="easy" onclick="window.location.href='Test 1 - High Scores Easy.html'">Easy</button>
+   <button id="medium">Medium</button>
+   <button id="hard" onclick="window.location.href='Test 1 - High Scores Hard.html'">Hard</button>
+  </div>
+  </div>
+   
 <script>
 function startGame(){
     console.log("clicked");
