--- a/Test 1 - Main Menu.html
+++ b/Test 1 - Main Menu.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <!--<meta charset="utf-8" />-->
-  <!--<link href="styles/styles.css" rel="stylesheet" type="text/css" />-->
+ 	<head>
+		<!--<meta charset="utf-8" />-->
+		<!--<link href="styles/styles.css" rel="stylesheet" type="text/css" />-->
   
-    <link type="text/css" rel="stylesheet" href="Test 1 - Main Menu CSS.css"/>
-    <!--<script src="Splash_JS.js" type="text/javascript></script>-->
-    <title>Swinging Monkey</title>
- </head>
- <body>
-  <button id="settings"></button>
-  <h1 class="headers" id="title">
-   Swinging Monkey</h1>
-  <h3 class="headers">
-   Studio de Singe</h3>
-  <div>
-   <button onclick="window.location.href='testStart.html'">Start Game</button>
-   <button onclick="JavaScript:alert('Well done!')">Tutorial</button>
-   <button onclick="window.location.href='Test 1 - High Scores Easy.html'">High Scores</button></div>
-<script>
-function startGame(){
-    console.log("clicked");
-}
+		<link type="text/css" rel="stylesheet" href="Test 1 - Main Menu CSS.css"/>
+		<!--<script src="Splash_JS.js" type="text/javascript></script>-->
+		<title>Swinging Monkey</title>
+		</head>
+	<body>
+		<button id="settings" onclick="window.location.href='Test 1 - Settings.html'" ></button>
+		<h1 class="headers" id="title">
+		Swinging Monkey</h1>
+		<h3 class="headers">
+		Studio de Singe</h3>
+		<div>
+			<button onclick="window.location.href='testStart.html'">Start Game</button>
+			<button onclick="JavaScript:alert('Well done!')">Tutorial</button>
+			<button onclick="window.location.href='Test 1 - High Scores Easy.html'">High Scores</button>
+		</div>
+		<script>
+			function startGame(){
+			console.log("clicked");
+			}
 
-function highScores(){
-    alert('Hello');
-}
-console.log("hi");
+			function highScores(){
+			alert('Hello');
+			}
+			console.log("hi");
 
-</script>
-</body>
-
-
-<!--http://www.hotscripts.com/forums/php/57676-how-redirect-another-page-once-click-html-button.html
-site which aided in providing how to change from one screen to another-->
+		</script>
+	</body>
+	<!--http://www.hotscripts.com/forums/php/57676-how-redirect-another-page-once-click-html-button.html
+	site which aided in providing how to change from one screen to another-->
 </html>
