--- a/testStart.html
+++ b/testStart.html
@@ -5,20 +5,13 @@
 		<title>TestStart</title>
 	</head>
 	<body>
-<<<<<<< HEAD
-		<a href="Game.html"><button onclick="difficulty(0)">Easy</button></a>
-		<a href="Game.html"><button onclick="difficulty(1)">Medium</button></a>
-		<a href="Game.html"><button onclick="difficulty(2)">Hard</button></a>
-=======
 
-	<button id="returnHome" onclick="window.location.href='Test 1 - Main Menu.html'">Back</button>
-	<h5 class="title">
-		Select Difficulty
-	</h5>
-		<a href="Game.html"><button id="easy" onclick="difficulty('easy')">Easy</button></a>
-		<a href="Game.html"><button id="medium" onclick="difficulty('medium')">Medium</button></a>
-		<a href="Game.html"><button id="hard" onclick="difficulty('hard')">Hard</button></a>
->>>>>>> November 7
+		<button id="returnHome" onclick="window.location.href='Test 1 - Main Menu.html'">Back</button>
+		<h5 class="title">Select Difficulty</h5>
+		
+		<a href="Game.html"><button id="easy" onclick="difficulty(0)">Easy</button></a>
+		<a href="Game.html"><button id="medium" onclick="difficulty(1)">Medium</button></a>
+		<a href="Game.html"><button id="hard" onclick="difficulty(2)">Hard</button></a>
 		
 	<body>	
 	
