--- a/Test 1 - Main Menu.html
+++ b/Test 1 - Main Menu.html
@@ -16,7 +16,7 @@
 		Studio de Singe</h3>
 		<div>
 			<button onclick="window.location.href='testStart.html'">Start Game</button>
-			<button onclick="JavaScript:alert('Well done!')">Tutorial</button>
+			<button onclick="sayHello()">Tutorial</button>
 			<button onclick="window.location.href='Test 1 - High Scores Easy.html'">High Scores</button>
 		</div>
 		<script>
@@ -24,7 +24,7 @@
 			console.log("clicked");
 			}
 
-			function highScores(){
+			function sayHello(){
 			alert('Hello');
 			}
 			console.log("hi");
