--- a/Test 1 - Main Menu.html
+++ b/Test 1 - Main Menu.html
@@ -17,7 +17,7 @@
 		<div>
 			<button onclick="window.location.href='testStart.html'">Start Game</button>
 			<button onclick="sayHello()">Tutorial</button>
-			<button onclick="window.location.href='Test 1 - High Scores Easy.html'">High Scores</button>
+			<button onclick="window.location.href='Test 1 - High Scores.html'">High Scores</button>
 		</div>
 		<script>
 			function startGame(){
