--- a/Test 1 - Settings.html
+++ b/Test 1 - Settings.html
@@ -7,9 +7,29 @@
 	<body>
 		<button id="returnHome" onclick="window.location.href='Test 1 - Main Menu.html'">Back</button>
 		<h3 class="headers">
-		Settings</h3>
-		<div>
-		</div>
+			Settings 
+		</h3>
+		<p>
+			<h4>Music:</h4>
+			<div>
+				<button id="musicOn">On</button>
+				<button id="musicOff">Off</button>
+			</div>
+		</p>
+		<p>
+			<h4>Sounds:</h4>
+			<div>
+				<button id="soundOn">On</button>
+				<button id="soundOff">Off</button>
+			</div>
+		</p>
+		<p>
+			<h4>Language:</h4>
+			<div>
+				<button id="english">English</button>
+				<button id="french">French</button>
+			</div>
+		</p>
 		<script>
 
 		</script>
