--- a/Test 1 - Tutorial.html
+++ b/Test 1 - Tutorial.html
@@ -8,6 +8,15 @@
 		<button id="returnHome" onclick="window.location.href='Test 1 - Main Menu.html'">Back</button>
 		<div>
 			<button id="monkey">Monkey</button>
+			<div id="gameInfo">
+				Time: 10 seconds
+				Scores: 15 points
+				Difficulty: Medium
+				Lives: <3<3<3<3<3
+			</div>
+			<div id="numbers">
+				
+			</div>
 		</div>
 		<script>
 		
