--- a/Test 1 - Tutorial.html
+++ b/Test 1 - Tutorial.html
@@ -14,12 +14,24 @@
 				Difficulty: Medium
 				Lives: <3<3<3<3<3
 			</div>
-			<div id="numbers">
-				
+			<div id="calculator">
+				<div id="calculatorScreen"> 2 </div>
+				<button id = "number1" class = "number">1</button>
+				<button id = "number2" class = "number">2</button>
+				<button id = "number3" class = "number">3</button>
+				<button id = "number4" class = "number">4</button>
+				<button id = "number5" class = "number">5</button>
+				<button id = "number6" class = "number">6</button>
+				<button id = "number7" class = "number">7</button>
+				<button id = "number8" class = "number">8</button>
+				<button id = "number9" class = "number">9</button>
+				<button id = "placeHolder1" class = "number"></button>
+				<button id = "number0" class = "number">0</button>
+				<button id = "placeHolder2" class = "number"></button>
 			</div>
 		</div>
 		<script>
-		
+
 		</script>
 	</body>
 	<!--http://www.hotscripts.com/forums/php/57676-how-redirect-another-page-once-click-html-button.html
