--- a/Test 1 - Settings.html
+++ b/Test 1 - Settings.html
@@ -33,11 +33,10 @@
 		<script>
 		
 			function languageChange(language, language2) {
-			alert("HELLO");
 			var elem = document.getElementById(language);
-			elem.style.border = "10px solid #000000";
+			elem.id = "red";
 			var elem2 = document.getElementById(language2);
-			elem2.style.border = "2px solid #000000";
+			elem2.style.border = "2px dashed #000000";
 			}
 		
 		</script>
