--- a/Test 1 - Tutorial.html
+++ b/Test 1 - Tutorial.html
@@ -8,12 +8,16 @@
 		<button id="returnHome" onclick="window.location.href='Test 1 - Main Menu.html'">Back</button>
 		<div>
 			<button id="monkey">Monkey</button>
+			<div id = "vine1"></div>
+			<div id = "banana">Banana</div>
+			<div id = "vine2"></div>
 			<div id="gameInfo">
 				Time: 10 seconds
 				Scores: 15 points
 				Difficulty: Medium
 				Lives: <3<3<3<3<3
 			</div>
+			<div id = "numberArea"> 6 + 4 = ___ </div>
 			<div id="calculator">
 				<div id="calculatorScreen"> 2 </div>
 				<button id = "number1" class = "number">1</button>
