--- a/mainMenu.html
+++ b/mainMenu.html
@@ -4,20 +4,20 @@
 		<!--<meta charset="utf-8" />-->
 		<!--<link href="styles/styles.css" rel="stylesheet" type="text/css" />-->
   
-		<link type="text/css" rel="stylesheet" href="Test 1 - Main Menu CSS.css"/>
+		<link type="text/css" rel="stylesheet" href="mainMenuCSS.css"/>
 		<!--<script src="Splash_JS.js" type="text/javascript></script>-->
 		<title>Swinging Monkey</title>
 		</head>
 	<body>
-		<button id="settings" onclick="window.location.href='Test 1 - Settings.html'" ></button>
+		<button id="settings" onclick="window.location.href='settings.html'" ></button>
 		<h1 class="headers" id="title">
 		Swinging Monkey</h1>
 		<h3 class="headers" id="companyTitle">
 		Studio de Singe</h3>
 		<div>
 			<button id ="startButton" onclick="window.location.href='testStart.html'">Start Game</button>
-			<button id ="tutorialButton" onclick="window.location.href='Test 1 - Tutorial.html'">Tutorial</button>
-			<button id ="highScoresButton" onclick="window.location.href='Test 1 - High Scores.html'">High Scores</button>
+			<button id ="tutorialButton" onclick="window.location.href='tutorial.html'">Tutorial</button>
+			<button id ="highScoresButton" onclick="window.location.href='highScores.html'">High Scores</button>
 		</div>
 		<script>
 		
