--- a/settings.html
+++ b/settings.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="Test 1 - Settings CSS.css"/>
+		<link type="text/css" rel="stylesheet" href="settingsCSS.css"/>
 		<title>Settings</title>
 	</head> 
 	<body>
-		<button id="returnHome" onclick="window.location.href='Test 1 - Main Menu.html'">Back</button>
+		<button id="returnHome" onclick="window.location.href='mainMenu.html'">Back</button>
 		<h3 class="headers">Settings </h3>
 		<p>
 			<h4>Music:</h4>
