--- a/tutorial.html
+++ b/tutorial.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
  	<head>
-		<link type="text/css" rel="stylesheet" href="Test 1 - Tutorial.css"/>
+		<link type="text/css" rel="stylesheet" href="tutorialCSS.css"/>
 		<title>Tutorial</title>
 		</head>
 	<body>
-		<button id="returnHome" onclick="window.location.href='Test 1 - Main Menu.html'">Back</button>
+		<button id="returnHome" onclick="window.location.href='mainMenu.html'">Back</button>
 		<div>
 			<button id="monkey">Monkey</button>
 			<div id = "vine1"></div>
