--- a/highScores.html
+++ b/highScores.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="Test 1 - High Scores CSS.css"/>
+		<link type="text/css" rel="stylesheet" href="highScoresCSS.css"/>
 		<title>High Scores</title>
 	</head>
 	<body>
-		<button id="returnHome" onclick="window.location.href='Test 1 - Main Menu.html'">Back</button>
+		<button id="returnHome" onclick="window.location.href='mainMenu.html'">Back</button>
 		<h3 class="headers">
 		High Scores</h3>
 		<div id="easyScores">
