--- a/logo.html
+++ b/logo.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="Test 1 - Logo CSS.css"/>
+		<link type="text/css" rel="stylesheet" href="logoCSS.css"/>
 		<title>Swinging Monkey</title>
 	</head>
 	<body>
 		<!--<button id="companyLogo" onclick = "window.location.href='Test 1 - Main Menu.html'" >-->
-		<img id ="companyLogo" onclick = "window.location.href='Test 1 - Main Menu.html'" src="Title Page Image.jpg" />
+		<img id ="companyLogo" onclick = "window.location.href='mainMenu.html'" src="titlePageImage.jpg" />
 	</body>
 	<!--http://www.hotscripts.com/forums/php/57676-how-redirect-another-page-once-click-html-button.html
 	site which aided in providing how to change from one screen to another-->
