--- a/logo.html
+++ b/logo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="logoCSS.css"/>
+		<link type="text/css" rel="stylesheet" href="logo.css"/>
 		<title>Swinging Monkey</title>
 	</head>
 	<body>
