--- a/mainMenu.html
+++ b/mainMenu.html
@@ -4,7 +4,7 @@
 		<!--<meta charset="utf-8" />-->
 		<!--<link href="styles/styles.css" rel="stylesheet" type="text/css" />-->
   
-		<link type="text/css" rel="stylesheet" href="mainMenuCSS.css"/>
+		<link type="text/css" rel="stylesheet" href="mainMenu.css"/>
 		<!--<script src="Splash_JS.js" type="text/javascript></script>-->
 		<title>Swinging Monkey</title>
 		</head>
