--- a/settings.html
+++ b/settings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="settingsCSS.css"/>
+		<link type="text/css" rel="stylesheet" href="settings.css"/>
 		<title>Settings</title>
 	</head> 
 	<body>
