--- a/testStart.html
+++ b/testStart.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 
-		<button id="returnHome" onclick="window.location.href='Test 1 - Main Menu.html'">Back</button>
+		<button id="returnHome" onclick="window.location.href='mainMenu.html'">Back</button>
 		<h5 class="title">Select Difficulty</h5>
 		
 		<a href="Game.html"><button id="easy" onclick="difficulty(0)">Easy</button></a>
