--- a/mainMenu.html
+++ b/mainMenu.html
@@ -9,17 +9,22 @@
 		<title>Swinging Monkey</title>
 		</head>
 	<body>
-		<button id="settings" onclick="window.location.href='settings.html'" ></button>
-		<h1 class="headers" id="title">
-		Swinging Monkey</h1>
-		<h3 class="headers" id="companyTitle">
-		Studio de Singe</h3>
-		<div>
-			<button id ="startButton" onclick="window.location.href='testStart.html'">Start Game</button>
-			<button id ="tutorialButton" onclick="window.location.href='tutorial.html'">Tutorial</button>
-			<button id ="highScoresButton" onclick="window.location.href='highScores.html'">High Scores</button>
-		</div>
+		<!--<div id="divBack">-->
+			<button id="settings" onclick="window.location.href='settings.html'" ></button>
+			<!--<h1 class="headers" id="title">
+			Swinging Monkey</h1>
+			<h3 class="headers" id="companyTitle">
+			Studio de Singe</h3>-->
+			<div>
+				<!--<img src="menuImage.jpg" /> -->
+				<button id ="startButton" onclick="window.location.href='testStart.html'"></button>
+				<button id ="tutorialButton" onclick="window.location.href='tutorial.html'"></button>
+				<button id ="highScoresButton" onclick="window.location.href='highScores.html'">High Scores</button>
+			</div>
+		<!--</div>-->
 		<script>
+		
+		
 		
 		// code if logo button was on this page
 		//var page = true;  
