--- a/logo.html
+++ b/logo.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<!--<button id="companyLogo" onclick = "window.location.href='Test 1 - Main Menu.html'" >-->
-		<img id ="companyLogo" onclick = "window.location.href='mainMenu.html'" src="titlePageImage.jpg" />
+		<img id ="companyLogo" onclick = "window.location.href='mainMenu.html'" src="logoImage.jpg"/>
 	</body>
 	<!--http://www.hotscripts.com/forums/php/57676-how-redirect-another-page-once-click-html-button.html
 	site which aided in providing how to change from one screen to another-->
