--- a/mainMenu.html
+++ b/mainMenu.html
@@ -17,14 +17,14 @@
 			Studio de Singe</h3>-->
 			<div>
 				<!--<img src="menuImage.jpg" /> -->
+				<!--<img id ="monkey" src="monkeySwinging.JPG"/> monkey that needs to swing around-->
+				<script>sayHello()</script>
 				<button id ="startButton" onclick="window.location.href='testStart.html'"></button>
 				<button id ="tutorialButton" onclick="window.location.href='tutorial.html'"></button>
 				<button id ="highScoresButton" onclick="window.location.href='highScores.html'">High Scores</button>
 			</div>
 		<!--</div>-->
 		<script>
-		
-		
 		
 		// code if logo button was on this page
 		//var page = true;  
