--- a/testStart.html
+++ b/testStart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="testStart.css"/>
+		<link type="text/css" rel="stylesheet" href="css/testStart.css"/>
 		<title>TestStart</title>
 	</head>
 	<body>
