--- a/mainMenu.html
+++ b/mainMenu.html
@@ -4,7 +4,7 @@
 		<!--<meta charset="utf-8" />-->
 		<!--<link href="styles/styles.css" rel="stylesheet" type="text/css" />-->
   
-		<link type="text/css" rel="stylesheet" href="mainMenu.css"/>
+		<link type="text/css" rel="stylesheet" href="css/mainMenu.css"/>
 		<!--<script src="Splash_JS.js" type="text/javascript></script>-->
 		<title>Swinging Monkey</title>
 		</head>
@@ -17,7 +17,7 @@
 			Studio de Singe</h3>-->
 			<div>
 				<!--<img src="menuImage.jpg" /> -->
-				<!--<img id ="monkey" src="monkeySwinging.JPG"/> monkey that needs to swing around-->
+				<img id ="monkey" onclick = "movement()" src="images/monkeySwinging.JPG"/><!--monkey that needs to swing around-->
 				<script>sayHello()</script>
 				<button id ="startButton" onclick="window.location.href='testStart.html'"></button>
 				<button id ="tutorialButton" onclick="window.location.href='tutorial.html'"></button>
@@ -25,6 +25,16 @@
 			</div>
 		<!--</div>-->
 		<script>
+		
+		function animation() {
+			var elem = document.getElementById("monkey");
+			elem.style.right = "2px";
+		}
+		
+		function movement() {
+			setTimeout(animation(), 80);
+			setInterval(animation(), 80);
+		}
 		
 		// code if logo button was on this page
 		//var page = true;  
