--- a/tutorial.html
+++ b/tutorial.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  	<head>
-		<link type="text/css" rel="stylesheet" href="tutorial.css"/>
+		<link type="text/css" rel="stylesheet" href="css/tutorial.css"/>
 		<title>Tutorial</title>
 		</head>
 	<body>
