--- a/testStart.html
+++ b/testStart.html
@@ -16,8 +16,7 @@
 	<body>	
 	
 	<script>
-	function difficulty(difficultyChosen)
-	{
+	function difficulty(difficultyChosen){
 		sessionStorage.difficulty=difficultyChosen;
 	}
 	</script>
