--- a/settings.html
+++ b/settings.html
@@ -6,7 +6,7 @@
 	</head> 
 	<body>
 		<button id="returnHome" onclick="window.location.href='mainMenu.html'">Back</button>
-		<h3 class="headers">Settings </h3>
+		<h3 id="headers">Settings</h3>
 		<p>
 			<h4>Music:</h4>
 			<div>
@@ -47,6 +47,8 @@
 			elem.style.border = "3px solid #FF3300";
 			var elem2 = document.getElementById("lang2");
 			elem2.style.border = "2px solid #000000";
+			var object = document.getElementById("headers");
+			object.innerHTML="Settings";
 			}
 			
 			function languageFrench() {
@@ -54,6 +56,8 @@
 			elem.style.border = "3px solid #FF3300";
 			var elem2 = document.getElementById("lang1");
 			elem2.style.border = "2px solid #000000";
+			var object = document.getElementById("headers");
+			object.innerHTML="French Settings";
 			}
 		
 		</script>
