--- a/tutorial.html
+++ b/tutorial.html
@@ -6,10 +6,10 @@
 		</head>
 	<body>
 		<button id="returnHome" onclick="window.location.href='mainMenu.html'">Back</button>
-		<div>
-			<button id="monkey">Monkey</button>
+		<div id="mainBackground">
+			<button id="monkey"></button>
 			<div id = "vine1"></div>
-			<div id = "banana">Banana</div>
+			<div id = "banana"></div>
 			<div id = "vine2"></div>
 			<div id="gameInfo">
 				Time: 10 seconds
@@ -18,9 +18,9 @@
 				Lives: <3<3<3<3<3
 			</div>
 			<div id = "numberArea"> 6 + 4 = ___ </div>
+			<div id="calculatorScreen"> 2 </div>
 			<div id="calculator">
-				<div id="calculatorScreen"> 2 </div>
-				<button id = "number1" class = "number">1</button>
+				<!--<button id = "number1" class = "number">1</button>
 				<button id = "number2" class = "number">2</button>
 				<button id = "number3" class = "number">3</button>
 				<button id = "number4" class = "number">4</button>
@@ -31,7 +31,7 @@
 				<button id = "number9" class = "number">9</button>
 				<button id = "placeHolder1" class = "number"></button>
 				<button id = "number0" class = "number">0</button>
-				<button id = "placeHolder2" class = "number"></button>
+				<button id = "placeHolder2" class = "number"></button>-->
 			</div>
 		</div>
 		<script>
