--- a/mainMenu.html
+++ b/mainMenu.html
@@ -8,7 +8,7 @@
 		<!--<script src="Splash_JS.js" type="text/javascript></script>-->
 		<title>Swinging Monkey</title>
 		</head>
-	<body onload="movement();">
+		<body>
 		<!--<div id="divBack">-->
 			<button id="settings" onclick="window.location.href='settings.html'" ></button>
 			<!--<h1 class="headers" id="title">
@@ -22,13 +22,15 @@
 				<!--</div> -->
 				<button id ="startButton" onclick="window.location.href='testStart.html'"></button>
 				<button id ="tutorialButton" onclick="window.location.href='tutorial.html'"></button>
-				<button id ="highScoresButton" onclick="window.location.href='highScores.html'">High Scores</button>
+				<button id ="highScoresButton" onclick="window.location.href='highScores.html'"></button>
 			</div>
 		<!--</div>-->
 		<script>
 			var monkeyDistance = document.getElementById("monkey").offsetLeft;
 			var object = document.getElementById("monkey");
-
+			
+			alert(localStorage.difficulty);
+			
 			setInterval(
 				function monkeyAnimation(){
 					var monkeyDistance = document.getElementById("monkey").offsetLeft - 10;
